Fix for longer text overflow in tooltip popup, max-width is redundant, line breaking is done already in translation.json files

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -330,7 +330,6 @@ background-position: -99.99% 0;
                         font-family: "Inter", sans-serif;
                         opacity: 0;
                         transition-duration: .3s;
-                        max-width: 136px;
                         border-radius: 10px;
                         padding: 8px 10px;
                         font-size: 10px;
